--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,11 @@
   color: #61dafb;
 }
 
+.App-div {
+  align-content: center;
+  vertical-align: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
